fix label spacing

--- a/packages/dnb-eufemia/src/components/input-masked/style/dnb-input-masked.scss
+++ b/packages/dnb-eufemia/src/components/input-masked/style/dnb-input-masked.scss
@@ -18,6 +18,10 @@
   border: none;
 }
 
+.dnb-stepped-mask {
+  width: fit-content;
+}
+
 .dnb-stepped-mask__legend {
   cursor: pointer;
 
